hsmc-macros/tests/ui/t9_4_default_non_child.stderr
error: `default(Cousin)` in state `Parent`: `Cousin` is not a direct child of `Parent`
  --> tests/ui/t9_4_default_non_child.rs:14:9
   |
14 |         default(Cousin);
   |         ^^^^^^^

error[E0405]: cannot find trait `MActions` in this scope
  --> tests/ui/t9_4_default_non_child.rs:21:6
   |
21 | impl MActions for MActionContext<'_> {
   |      ^^^^^^^^ not found in this scope

error[E0425]: cannot find type `MActionContext` in this scope
  --> tests/ui/t9_4_default_non_child.rs:21:19
   |
21 | impl MActions for MActionContext<'_> {
   |                   ^^^^^^^^^^^^^^ not found in this scope
